# outomem

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
ai-docs/: GOVERNANCE.md  architecture.md  philosophy.md
ai-docs/api-reference/: layers.md  neo4j-layers.md  outomem.md  providers.md
ai-docs/explanations/: memory-consolidation.md  sentiment-tracking.md  strength-decay.md
ai-docs/guides/: backup-restore.md  context-synthesis.md  contradiction-detection.md  memory-layers.md  quickstart.md
outomem/: __init__.py  core.py  layers.py  neo4j_layers.py  prompts.py  utils.py
outomem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
outomem/providers/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_client.py  openai_responses_client.py
tests/: test_backup.py  test_health_check.py  test_prompts.py  test_providers.py  test_utils.py
